Various spacing and sizing fixes

--- a/app/javascript/mastodon/features/annual_report/index.module.scss
+++ b/app/javascript/mastodon/features/annual_report/index.module.scss
@@ -21,7 +21,8 @@ $mobile-breakpoint: 540px;
   scrollbar-color: var(--color-text-secondary) var(--color-bg-secondary);
 
   @media (width < $mobile-breakpoint) {
-    padding-inline: 10px;
+    padding-top: 0;
+    padding-inline: 0;
   }
 
   .loading-indicator .circular-progress {
@@ -50,12 +51,14 @@ $mobile-breakpoint: 540px;
 }
 
 .wrapper {
+  box-sizing: border-box;
   position: relative;
   max-width: 600px;
   padding: 24px;
+  padding-top: 40px;
   contain: layout;
   flex: 0 0 auto;
-  pointer-events: auto;
+  pointer-events: all;
   color: var(--color-text-primary);
   background: var(--color-bg-primary);
   background:
@@ -70,7 +73,7 @@ $mobile-breakpoint: 540px;
   @media (width < $mobile-breakpoint) {
     padding-inline: 12px;
     padding-bottom: 12px;
-    border-radius: 28px;
+    border-radius: 0;
   }
 
   &::after {
@@ -92,7 +95,7 @@ $mobile-breakpoint: 540px;
     font-family: silkscreen-wrapstodon, monospace;
     font-size: 28px;
     line-height: 1;
-    margin-bottom: 8px;
+    margin-bottom: 4px;
     padding-inline: 40px; // Prevent overlap with close button
 
     @media (width < $mobile-breakpoint) {
@@ -116,7 +119,7 @@ $mobile-breakpoint: 540px;
 
 .box {
   position: relative;
-  padding: 16px;
+  padding: 24px;
   border-radius: 16px;
   background: rgb(from var(--color-bg-primary) r g b / 60%);
   box-shadow: inset 0 0 0 1px rgb(from var(--color-text-primary) r g b / 40%);
@@ -150,7 +153,6 @@ $mobile-breakpoint: 540px;
   flex-direction: column;
   justify-content: center;
   gap: 8px;
-  padding: 16px;
   font-size: 14px;
   text-align: center;
   text-wrap: balance;
@@ -164,6 +166,10 @@ $mobile-breakpoint: 540px;
   text-transform: uppercase;
   color: #c2c8ff;
   font-weight: 500;
+
+  &:last-child {
+    margin-bottom: -3px;
+  }
 }
 
 .statLarge {
@@ -185,7 +191,7 @@ $mobile-breakpoint: 540px;
 
 .mostBoostedPost {
   padding: 0;
-  padding-top: 8px;
+  padding-top: 24px;
   overflow: hidden;
 }
 
@@ -260,7 +266,7 @@ $mobile-breakpoint: 540px;
   display: flex;
   flex-direction: column;
   align-items: center;
-  gap: 12px;
+  gap: 16px;
 
   p {
     max-width: 460px;
