--- a/app/javascript/mastodon/features/annual_report/shared_page.module.scss
+++ b/app/javascript/mastodon/features/annual_report/shared_page.module.scss
@@ -1,7 +1,14 @@
+$mobile-breakpoint: 540px;
+
 .wrapper {
   max-width: max-content;
   margin-inline: auto;
   padding: 40px 10px;
+
+  @media (width < $mobile-breakpoint) {
+    padding-top: 0;
+    padding-inline: 0;
+  }
 }
 
 .footer {
